# transmon-gate-fidelity-qutip

./: Citation  LICENSE  README.md  pyproject.toml  requirements.txt
Project Structure/: Structure
Quick Start/: quick start
scripts/: run_fidelity.py
src/transmon_fidelity/: fidelity.py  main.py  physics.py  plotting.py  simulation.py
